Alter rubpcop rules
Method length for 10 lines was decided by Brendan and I to be too short

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,3 +37,12 @@ Metrics/BlockLength:
 Metrics/LineLength:
   IgnoredPatterns:
     - '\w*it.+do'
+
+Style/Lambda:
+    Enabled: false
+
+Metrics/MethodLength:
+  Max: 15
+
+Metrics/AbcSize:
+  Max: 25
